--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,21 @@
+@import url("https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,400;0,500;0,700;1,500");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  font-family: "Kanit", sans-serif;
+}
+
+button {
+  border: 3px solid black;
+  background-color: transparent;
+  font-weight: 500;
+  font-style: italic;
+  padding: 4px 16px;
+  text-transform: uppercase;
+}
+
+h1 {
+  font-size: 48px;
+}
