feat: remodel frontend homepage

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,400;0,500;0,700;1,500");
+@import url("https://fonts.cdnfonts.com/css/helvetica-neue-55");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -9,25 +9,99 @@
   }
 
   h1 {
-    @apply md:text-5xl text-4xl;
+    @apply md:text-5xl text-6xl font-medium pb-3;
   }
 
   button {
-    @apply border-[3px] border-black bg-transparent font-medium italic px-4 py-1 uppercase hover:bg-black hover:text-white transition-all;
+    @apply border text-white font-medium border-white/20 rounded-[30px] px-4 py-2;
+  }
+
+  p {
+    @apply text-[#D2D0DD] text-base font-medium;
+  }
+}
+
+@layer components {
+  .toolkit-icon {
+    @apply p-[10px];
   }
 }
 
 body {
-  font-family: "Kanit", sans-serif;
+  font-family: "Helvetica Neue", sans-serif;
   scroll-behavior: smooth;
 }
 
-.bg-blue {
-  background: #0a0219;
-  background: radial-gradient(
-    circle,
-    rgba(2, 0, 36, 1) 0%,
-    rgba(33, 13, 73, 1) 50%,
-    rgba(10, 2, 25, 1) 100%
+h1 {
+  background: linear-gradient(
+    180deg,
+    rgba(255, 255, 255, 0.7) 0%,
+    rgba(255, 255, 255, 0.95) 23.96%,
+    rgba(255, 255, 255, 0.7) 100%
   );
+  background-clip: text;
+  -webkit-background-clip: text;
+  line-height: 1.2 !important;
+  -webkit-text-fill-color: transparent;
+}
+
+button {
+  background: radial-gradient(
+    50% 50% at 50.34% 50%,
+    rgba(168, 128, 255, 0) 0%,
+    rgba(168, 128, 255, 0.15) 100%
+  );
+  box-shadow: 0px 0px 0px 1px #2d2641, 0px 0px 4px 2px rgba(168, 128, 255, 0.1),
+    0px 0px 4px 4px rgba(168, 128, 255, 0.1) inset;
+}
+
+.toolkit-icon {
+  border-radius: 8px;
+  border: 1px solid rgba(255, 255, 255, 0.4);
+  width: fit-content;
+  background: radial-gradient(
+      50% 50% at 50.34% 50%,
+      rgba(168, 128, 255, 0) 0%,
+      rgba(168, 128, 255, 0.15) 100%
+    ),
+    rgba(255, 255, 255, 0.08);
+  box-shadow: 0px 0px 0px 1px #2d2641, 0px 0px 4px 2px rgba(168, 128, 255, 0.1),
+    0px 0px 4px 4px rgba(168, 128, 255, 0.1) inset;
+}
+
+.steps {
+  border-radius: 16px;
+  border: 1px solid rgba(255, 255, 255, 0.4);
+  background: radial-gradient(
+      49.87% 49.87% at 50% 50.13%,
+      rgba(168, 128, 255, 0.17) 0%,
+      rgba(168, 128, 255, 0) 100%
+    ),
+    rgba(255, 255, 255, 0.08);
+  box-shadow: 0px 0px 0px 1px #2d2641, 0px 0px 4px 2px rgba(168, 128, 255, 0.1),
+    0px 0px 4px 4px rgba(168, 128, 255, 0.1) inset;
+}
+
+.grid-bg {
+  background: linear-gradient(
+    180deg,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0.08) 50%,
+    rgba(255, 255, 255, 0) 100%
+  );
+}
+
+.footer {
+  border-top: 1px solid;
+  border-image: linear-gradient(
+      270deg,
+      rgba(255, 255, 255, 0) 0%,
+      rgba(255, 255, 255, 0.4) 51.04%,
+      rgba(255, 255, 255, 0) 100%
+    )
+    repeat 1;
+}
+
+.steps-inner {
+  background: url("./assets/grid-bg.png") repeat;
 }
